--- a/index.html
+++ b/index.html
@@ -1,108 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>DesignSolutions</title>
-<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" rel="stylesheet" />
-<style>
-    * { margin: 0; padding: 0; box-sizing: border-box; }
-    body { background: #0a0a0a; color: #f0f0f0; font-family: Arial,sans-serif; }
-    header { position: fixed; top: 0; width: 100%; padding:1rem 2rem; background:rgba(0,0,0,0.8); z-index:1000; display:flex; justify-content:space-between; align-items:center; }
-    header img { height:40px; }
-    header nav a { color:#00ffff; margin-left:1.5rem; text-decoration:none; font-weight:bold; }
-    header nav a:hover { color:#fff; }
-
-    .hero { position: relative; height:100vh; overflow:hidden; display:flex; align-items:center; justify-content:center; text-align:center; }
-    .hero video { position:absolute; width:100%; height:100%; object-fit:cover; opacity:0.3; z-index:0; }
-    .hero-content { position:relative; z-index:1; animation:fadeIn 1s ease forwards; opacity:0; transform:translateY(20px); }
-    .hero h1 { font-size:4rem; color:#00ffff; margin-bottom:1rem; }
-    .hero p { font-size:1.2rem; opacity:0.8; }
-    @keyframes fadeIn { to { opacity:1; transform:translateY(0); } }
-
-    section { padding:4rem 2rem; text-align:center; max-width:1100px; margin:auto; }
-    section h2 { color:#00ffff; margin-bottom:2rem; }
-    .service-grid, .portfolio-grid { display:grid; grid-template-columns:repeat(auto-fit, minmax(220px,1fr)); gap:1rem; }
-    .service-card, .portfolio-item { background:#111; padding:1.5rem; border-radius:10px; cursor:pointer; transition:transform 0.3s, box-shadow 0.3s; }
-    .service-card:hover, .portfolio-item:hover { transform:scale(1.05); box-shadow:0 0 10px #00ffff; }
-    .service-card i { font-size:2rem; color:#00ffff; margin-bottom:0.5rem; }
-    .contact-form input, .contact-form textarea { width:100%; padding:0.8rem; margin-bottom:1rem; border:none; border-radius:5px; }
-    .contact-form button { background:#00ffff; color:#000; padding:0.8rem 1.5rem; border:none; border-radius:5px; cursor:pointer; font-weight:bold; }
-    .contact-form button:hover { background:#fff; }
-    footer { padding:1rem; background:#111; color:#888; text-align:center; margin-top:2rem; }
-</style>
+  <meta charset="UTF-8" />
+  <title>DesignSolutions</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
+  <style>
+    body, html {
+      margin: 0;
+      padding: 0;
+      height: 100%;
+      font-family: 'Poppins', sans-serif;
+      background-color: black;
+      color: white;
+      overflow-x: hidden;
+    }
+    header {
+      width: 100%;
+      position: absolute;
+      top: 0;
+      left: 0;
+      padding: 1rem 2rem;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      background: rgba(0, 0, 0, 0.6);
+      z-index: 10;
+    }
+    header img {
+      height: 40px;
+    }
+    nav a {
+      color: #00ffff;
+      text-decoration: none;
+      margin-left: 2rem;
+      font-weight: 600;
+    }
+    .hero {
+      position: relative;
+      height: 100vh;
+      background: url('your-animated-hero-video-or-image-here.mp4') center center/cover no-repeat;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+    }
+    .hero h1 {
+      font-size: 4rem;
+      color: #00ffff;
+    }
+    .hero p {
+      margin: 1rem 0 2rem;
+      font-size: 1.2rem;
+      max-width: 600px;
+    }
+    .cta-button {
+      background-color: #00ffff;
+      color: black;
+      padding: 0.8rem 1.5rem;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      font-size: 1rem;
+      transition: background 0.3s;
+    }
+    .cta-button:hover {
+      background: #00cccc;
+    }
+  </style>
 </head>
 <body>
-
-<header>
-    <img src="./DesignSolutions-logo.png" alt="DesignSolutions" />
+  <header>
+    <img src="DesignSolutions-logo.png" alt="DesignSolutions" />
     <nav>
       <a href="#about">About</a>
       <a href="#services">Services</a>
-      <a href="#portfolio">Portfolio</a>
       <a href="#contact">Contact</a>
     </nav>
-</header>
+  </header>
 
-<div class="hero">
-    <video autoplay muted loop playsinline>
-      <source src="./engineering-animation.mp4" type="video/mp4" />
-    </video>
-    <div class="hero-content">
-      <h1>DesignSolutions</h1>
-      <p>Professional 2D & 3D design, engineering calcs, and technical documentation — tailored solutions to help your business excel.</p>
-    </div>
-</div>
-
-<section id="about">
-    <h2>About Us</h2>
-    <p>Bangalore-based company delivering exceptional 2D/3D modeling, cylinder selection, engineering calculations, and technical documentation.</p>
-</section>
-
-<section id="services">
-    <h2>Our Services</h2>
-    <div class="service-grid">
-      <div class="service-card"><i class="fa fa-cube"></i><h3>3D Modeling</h3></div>
-      <div class="service-card"><i class="fa fa-pencil-ruler"></i><h3>2D Drafting</h3></div>
-      <div class="service-card"><i class="fa fa-calculator"></i><h3>Engineering Calcs</h3></div>
-      <div class="service-card"><i class="fa fa-cogs"></i><h3>Cylinder Selection</h3></div>
-      <div class="service-card"><i class="fa fa-file-alt"></i><h3>Documentation</h3></div>
-    </div>
-</section>
-
-<section id="portfolio">
-    <h2>Our Work</h2>
-    <div class="portfolio-grid">
-      <div class="portfolio-item"><img src="./portfolio1.png" alt="Work 1" style="width:100%; border-radius:8px;" /></div>
-      <div class="portfolio-item"><img src="./portfolio2.png" alt="Work 2" style="width:100%; border-radius:8px;" /></div>
-      <div class="portfolio-item"><img src="./portfolio3.png" alt="Work 3" style="width:100%; border-radius:8px;" /></div>
-    </div>
-</section>
-
-<section id="contact">
-    <h2>Get In Touch</h2>
-    <form class="contact-form" onsubmit="return validateForm()">
-      <input id="name" type="text" placeholder="Your Name" required />
-      <input id="email" type="email" placeholder="Your Email" required />
-      <textarea id="message" placeholder="Your Message" rows="4" required></textarea>
-      <button type="submit">Send Message</button>
-    </form>
-</section>
-
-<footer>&copy; 2025 DesignSolutions | Bangalore</footer>
-
-<script>
-function validateForm() {
-    const name = document.getElementById('name').value.trim();
-    const email = document.getElementById('email').value.trim();
-    const message = document.getElementById('message').value.trim();
-    if(!name || !email || !message) {
-        alert('Please fill in all fields.');
-        return false;
-    }
-    return true;
-}
-</script>
-
+  <!-- HERO SECTION -->
+  <section class="hero">
+    <h1>DesignSolutions</h1>
+    <p>Professional 2D &amp; 3D design, engineering calculations, and technical documentation — tailored solutions to help your business excel.</p>
+    <button class="cta-button">Get In Touch</button>
+  </section>
 </body>
 </html>
